Added an URL enforcement mechanism, if a plugin sets the global variable window.webdav_connector_enforced_url the webdav file browsing dialog will use it as the default repository and disables the repository editing actions.

--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -26,6 +26,7 @@
     width: 20px;
     height: 20px;
     margin: 0 0 0 10px;
+    vertical-align: middle;
 }
 .webdav-domain-edit:hover {
     background-color: lightgrey;
