--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -58,3 +58,12 @@
     width: 65%;
     margin-left: 5px;
 }
+
+.enforced-servers-config {
+    padding: 20px;
+    text-align: center;
+}
+
+.enforced-servers-config #webdav-browse-url {
+    width: 70%;
+}
