--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -104,7 +104,7 @@
 }
 
 .webdav-logout-container:hover {
-    border-color: lightgrey;
+    border-color: #D3D3D3;
 }
 
 .webdav-logout-container .webdav-username {
