--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -101,6 +101,8 @@
     cursor: pointer;
     border: 1px solid transparent;
     border-radius: 4px;
+    z-index: 1;
+    color: #F3F4F4;
 }
 
 .webdav-logout-container:hover {
