WA-992 We show the logout button on the dialog header only in dashboard in repo preview mode.

--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -93,6 +93,10 @@
     text-decoration: none;
 }
 
+.webdav-hide-logout .webdav-logout-container {
+    display: none;
+}
+
 .webdav-logout-container {
     position: absolute;
     top: 5px;
