WA-2107 Treated the case when a server is enforced after the plugins are loaded.

--- a/resources/webdav.css
+++ b/resources/webdav.css
@@ -90,7 +90,7 @@
 .webdav-repo-edit-input {
     display: inline-block;
     height: inherit;
-    width: 80%;
+    white-space: nowrap;
 }
 
 .webdav-repo-editing {
